# MyJniDemo

./: build.gradle  settings.gradle  说明 .txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/myjnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/: com_example_myjnidemo_LameUtils.h
app/src/main/java/com/example/myjnidemo/: LameUtils.java  MainActivity.java  SayHello.java  TestAudioRecord.java
app/src/main/jni/: NativeHelloJNI.cpp  NativeHelloJNI.h  com_example_myjnidemo_SayHello.h
app/src/main/jni/libmp3lame/: util.h
app/src/main/res/layout/: activity_main.xml  activity_test_audio_record.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myjnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myconvertmp3/: build.gradle
myconvertmp3/libs/: app-release.aar
myconvertmp3/src/androidTest/java/com/example/myconvertmp3/: ExampleInstrumentedTest.java
myconvertmp3/src/main/: AndroidManifest.xml
myconvertmp3/src/main/java/com/example/myconvertmp3/: MainActivity.java
myconvertmp3/src/main/res/layout/: activity_main.xml
myconvertmp3/src/main/res/values/: strings.xml
myconvertmp3/src/test/java/com/example/myconvertmp3/: ExampleUnitTest.java
